kotlin/programming-kotlin_code/functions/output/err.output
err.kts:1:17: error: inferred type is a function type, but a non-function type Int was expected. Use either '= ...' or '{ ... }', but not both.
fun f1(): Int = { 2 }
                ^
